test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/hidden_params/BUCK.fixture
load("//simple:simple_rule.bzl", "simple_rule")

simple_rule(name = "passing_implicit", _hidden = "should not be able to pass", mandatory = 5)
